--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,64 @@
   color: #61dafb;
 }
 
-.container{
-    max-width: 1500px;
+.container {
+  max-width: 93.5rem;
+  margin: 0 auto;
+  padding: 0 2rem;
 }
 
 .modal-size {
   width: 70%;
   max-width: none!important;
   height: auto;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 3rem;
+}
+
+.gallery-item {
+  position: relative;
+  flex: 1 0 22rem;
+  margin: 1rem;
+  color: #fff;
+  cursor: pointer;
+}
+
+.gallery-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.gallery-item:hover .gallery-item-info,
+.gallery-item:focus .gallery-item-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.gallery-item-info {
+  display: none;
+}
+
+.gallery-item-info li {
+  display: inline-block;
+  font-size: 1.7rem;
+  font-weight: 600;
+}
+
+.gallery-item-title {
+  margin-right: 2.2rem;
+}
+
+.card-title {
+  text-transform: capitalize;
 }
