--- a/src/App.css
+++ b/src/App.css
@@ -35,14 +35,13 @@
 .gallery-item {
   position: relative;
   flex: 1 0 22rem;
-  margin: 1rem;
+  margin-bottom: 1rem;
   color: #fff;
   cursor: pointer;
 }
 
 .gallery-image {
   width: 100%;
-  height: 100%;
   object-fit: cover;
 }
 
