--- a/src/App.css
+++ b/src/App.css
@@ -74,3 +74,15 @@
 .card-title {
   text-transform: capitalize;
 }
+
+@media (max-width: 550px) {
+  .modal-size {
+    width: 100%;
+    max-width: none!important;
+    height: auto;
+  }
+
+  .baking-detail-title {
+    font-size: 50%;
+  }
+}
