--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 .container {
   max-width: 93.5rem;
   margin: 0 auto;
-  padding: 0 2rem;
+  /* padding: 0 2rem; */
 }
 
 .modal-size {
@@ -33,9 +33,10 @@
 }
 
 .gallery-item {
+  max-width: 100%;
   position: relative;
   flex: 1 0 22rem;
-  margin-bottom: 1rem;
+  margin: 1rem 1rem 0 0;
   color: #fff;
   cursor: pointer;
 }
@@ -75,7 +76,15 @@
   text-transform: capitalize;
 }
 
-@media (max-width: 550px) {
+@media (max-width: 600px) {
+  .navbar {
+    padding: 0;
+  }
+
+  body {
+    position: absolute;
+  }
+
   .modal-size {
     width: 100%;
     max-width: none!important;
